2012-July-24 Chris Morley

	* popDiag.xsl TS energies in Grain Population diagrams now as
	  full length dotted lines.

2012-July-21 Struan Robertson

	* MoleculeManager.cpp/.h: Minor change to add molecule method.

2012-July-21 Struan Robertson

	* System.cpp/.h, UnitTests.cpp: Add new MEIC unit test for sum of states.

2012-July-21 Struan Robertson

	* System.cpp/.h, ThermodynamicTable.cpp: Altered so that thermodynamic
	table calculations do not need to specify a reaction sequence.

2012-July-16 Struan Robertson

	* Morse.cpp: Initial template for Morse density of states class.

2012-July-13 Chris Morley

	* src/error.cpp: flush log file on the way through so there is
	something to look at after a crash

	* src/CollisionOperator.cpp: Change "Cell number" to 
	"Number of Cells" and supressed multiple messages.
	
	* src/MesmerMath.cpp: add "once" to supress multiple error messages.
	Moved Error Context() (but may not be significant. 

	* src/MolecularComponents.cpp, src/MolecularComponents.h: remove log
	messages about atoms not having vibrational frequencies and rot consts.  
	
	* src/System.cpp: Don't output elaspsed time unless > 0.

2012-June-17 Chris Morley

	* src/oberror.cpp, src/oberror.h: An additional parameter on
	ThrowError() causes error messages to be output only once.
	Manipulator 'once' does this for output to cerr etc.

	The files are renamed to error.h and error.cpp because they are
	considerably different from the OpenBabel versions.
	 
	* src/plugins/ExponentialDown.cpp: Change the error "Delta E down is
	smaller	than grain size" to use this facility.

	* src/MolecularComponents.cpp: minor tidying on an error message to
	make it more consistent with current error handling.

2012-June-16 Chris Morley

	* src/CollisionOperator.cpp: Add unnormalised log output for grain
	populations.

	* mesmer1.xsl: Add another text section in Firefox output for grain
	populations, to make cutting and pasting for speadsheets possible.
	 