@@ -2,7 +2,9 @@
  Thermodynamic Tables
  --------------------
 
-HNO2
+ HNO2
+ ----
+
        Temp           H(T)           S(T)           G(T)
         (K)       (kJ/mol)     (kJ/mol/K)       (kJ/mol)
  -------------------------------------------------------
@@ -32,7 +34,9 @@ HNO2
         900        46.7234       0.218938       -150.321
         950        50.1251       0.222167       -160.933
 
-He
+ He
+ --
+
        Temp           H(T)           S(T)           G(T)
         (K)       (kJ/mol)     (kJ/mol/K)       (kJ/mol)
  -------------------------------------------------------
@@ -62,7 +66,9 @@ He
         900        18.7135      0.0557963       -31.5031
         950        19.7528      0.0564706       -33.8942
 
-NO
+ NO
+ --
+
        Temp           H(T)           S(T)           G(T)
         (K)       (kJ/mol)     (kJ/mol/K)       (kJ/mol)
  -------------------------------------------------------
@@ -92,7 +98,9 @@ NO
         900        27.9745       0.151665       -108.524
         950        29.6429       0.153019       -115.726
 
-OH
+ OH
+ --
+
        Temp           H(T)           S(T)           G(T)
         (K)       (kJ/mol)     (kJ/mol/K)       (kJ/mol)
  -------------------------------------------------------
